--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@
 
     background: url("../img/Shape_+_Group_Mask.png") fixed no-repeat center ;
     background-size: cover;
-    clip-path: polygon(0% 0%, 85% 0%, 100% 0%, 100% 85%, 100% 100%, 15% 100%, 0% 85%, 0% 15%);
+    border-radius: 0 0 0 30%;
+
 }
 #header-banner .content-logo{
     text-align: center;
@@ -32,12 +33,13 @@
 }
 /* testimonials */
 #testimonials{
+    padding: 60px;
     background-color:rgba(239, 239, 242, 1);
 
 }
 .testimonials-text{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 240px;
 
 }
  .testimonials-text h2{
@@ -82,6 +84,10 @@
 .slick-slide {
     width: 240px !important;
     margin: 15px !important;
+}
+.slick-dotted.slick-slider {
+    margin-bottom: 30px;
+    margin-top: 145px;
 }
 .slick-track{
     opacity: 1;
@@ -272,4 +278,24 @@
      #footer .social-media{
          justify-content: center;
      }
+}
+/*
+}*/
+
+@media only screen and (max-width: 480px){
+    .testimonials-text {
+        text-align: center;
+        margin-top: 14px;
+    }
+    .testimonials-text h2 {
+        font-size: 19px;
+        margin: 20px 0;
+        color: rgba(54, 53, 96, 1);
+    }
+    .testimonials-text p {
+        font-size: 16px;
+        color: rgba(54, 53, 96, 1);
+    }
+
+
 }
